--- a/dev/Landau-Damping/landau-damping.ipynb
+++ b/dev/Landau-Damping/landau-damping.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "import sys\n",
+    "sys.path.append(\"../../analysis/\")\n",
     "\n",
     "import osiris2\n",
     "import osiris\n",
@@ -696,7 +697,7 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
