--- a/notebooks/faraday-rotation/faraday-rotation.ipynb
+++ b/notebooks/faraday-rotation/faraday-rotation.ipynb
@@ -372,7 +372,7 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
